Fixed the pictures on small devices

--- a/css/2-45.css
+++ b/css/2-45.css
@@ -474,7 +474,8 @@ footer {
   & figure.captioned-picture {
     & img {
       margin-inline: auto;
-      box-shadow: 0 .5em 1em rgba(0,0,0,.15)
+      box-shadow: 0 .5em 1em rgba(0,0,0,.15);
+      width: 100%;
     }
     
     & figcaption {
